--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@firebase/firestore": "^3.12.1",
+    "@heroicons/react": "^2.0.18",
     "autoprefixer": "10.4.14",
     "bcrypt": "^5.1.0",
     "mongodb": "^5.4.0",
@@ -18,6 +20,8 @@
     "postcss": "8.4.23",
     "react": "18.2.0",
     "react-dom": "18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "swr": "^2.1.5",
     "tailwindcss": "3.3.2"
   }
 }
